gccida/g0/regmove_optimize
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1530:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class dst_class; // [rsp+208h] [rbp-F8h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1531:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class src_class; // [rsp+20Ch] [rbp-F4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1541:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class dst_class_0; // [rsp+250h] [rbp-B0h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1542:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class src_class_0; // [rsp+254h] [rbp-ACh] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1609:13: error: expected identifier or '('
 struct set = v6; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1631:11: error: invalid operands to binary expression ('struct rtx_def' and 'long long')
&& set[1] != set->fld[0].rtwint ) 
   ~~~~~~ ^  ~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1641:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( op_no = 0; op_no < recog_data_0.n_operands; ++op_no ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1646:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
src = recog_data_0.operand[op_no]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1647:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
dst = recog_data_0.operand[match_no]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1655:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( dst->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1669:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[match_no] == set->fld[0].rtx 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1673:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( comm = recog_data_0.operand[match.commutative[op_no]], !operands_match_p( comm, dst)) 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1728:30: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( op_no_0 = 0; op_no_0 < recog_data_0.n_operands; ++op_no_0 ) 
                             ^~~~~~~~~~~~
                             recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1734:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
dst_0 = recog_data_0.operand[match_no_0]; 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1735:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
src_0 = recog_data_0.operand[op_no_0]; 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1744:15: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( comm_0 = recog_data_0.operand[match.commutative[op_no_0]], !operands_match_p( comm_0, dst_0)) ) 
              ^~~~~~~~~~~~
              recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1759:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[match_no_0] == set_0->fld[0].rtx ) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1796:91: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( p = *( rtx *)( *( _QWORD *)&pass[4] + 16LL); p && !perhaps_ends_bb_p( p); p = ( rtx)p[1] ) 
                                                                                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/regmove.c:1804:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = (  struct rtx_def *)p[2]; 
                          ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regmove_optimize/src/obj/regmove.o] Error 1
